-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.6.0
-
OpenSFS cluster with four MDTs, three OSTs with two OSSs each, and six clients
-
3
-
13585
When running LFSCK and there are inodes/objects that cannot be fixed, the first_failure_count should not be zero. Yet, in the following output, we see that there are objects that can't be fixed, but the first_failure_position = 0
# lctl lfsck_start -M scratch-MDT0000 -o --type layout --reset Started LFSCK on the device scratch-MDT0000: layout. # lctl get_param -n mdd.scratch-MDT0000.lfsck_layout name: lfsck_layout magic: 0xb173ae14 version: 2 status: completed flags: param: all_targets,orphan time_since_last_completed: 1835 seconds time_since_latest_start: 2578 seconds time_since_last_checkpoint: 1835 seconds latest_start_position: 0 last_checkpoint_position: 47185921 first_failure_position: 0 success_count: 125 repaired_dangling: 0 repaired_unmatched_pair: 0 repaired_multiple_referenced: 0 repaired_orphan: 0 repaired_inconsistent_owner: 0 repaired_others: 0 skipped: 0 failed_phase1: 56 failed_phase2: 47 checked_phase1: 5600020 checked_phase2: 4956694 run_time_phase1: 217 seconds run_time_phase2: 526 seconds average_speed_phase1: 25806 items/sec average_speed_phase2: 9423 objs/sec real-time_speed_phase1: N/A real-time_speed_phase2: N/A current_position: N/A