LU-4919 lfsck: record the first failure position

The layout LFSCK should set lfsck_layout::ll_pos_first_inconsistent,
then we can know where the first object to be fixed or failed to be
checked, which can save some effort when switch LFSCK from dryrun to
repair mode.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Icd8f4bce6b75c07b1daeac36062b6736bb66c7fc
Reviewed-on: http://review.whamcloud.com/9985
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>